css/main.css
#loading-overlay {
    width: 100%;
    height: 100%;
    background: #000000;
    position: fixed;
    top: 0;
    left: 0;
    opacity: 0.8;
    z-index: 50;
    display: none;
}

#loading-overlay #message {
    text-align: center;
    color: white;
    font-size: 14px;
    font-family: Sans-Serif;

    /* vertical align via http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/ */
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.clear {
    clear: both;
}

#top-left {
    width: 40%;
    height: 50%;
    float: left;
}

#top-right-container {
    width: 60%;
    height: 50%;
    float: left;
}

#top-right-TL {
    width: 50%;
    height: 50%;
    float: left;
}

#top-right-TR {
    width: 50%;
    height: 50%;
    float: left;
}

#top-right-BL {
    width: 50%;
    height: 50%;
    float: left;
}

#top-right-BR {
    width: 50%;
    height: 50%;
    float: left;
}

#mid-full-container {
    width: 100%;
    height: 25%;
    float: left;
}

#mid-full {

}

#bot-full {
    width: 100%;
    height: 25%;
    float: left;
}

#temp-top-left {
    width: 40%;
    height: 55%;
    float: left;
}

#temp-bot-left {
    width: 40%;
    height: 45%;
    float: left;
    text-align: center;
}

#temp-right {
    width: 60%;
    height: 100%;
    float: right;
}

#temp-bot-left-1, #temp-bot-left-2 {
    display: inline-block;
}

